--- a/package.json
+++ b/package.json
@@ -8,19 +8,27 @@
     "@testing-library/react": "14.0.0",
     "@testing-library/user-event": "14.4.3",
     "apexcharts": "3.41.0",
+    "autoprefixer": "^10.4.19",
+    "axios": "^1.7.2",
     "bootstrap": "5.3.0",
     "bootstrap-icons": "1.10.5",
+    "firebase": "^10.12.4",
+    "flowbite-react": "^0.10.1",
     "gapi-script": "^1.2.0",
     "history": "5.3.0",
+    "mdb-react-ui-kit": "^8.0.0",
     "node-sass": "9.0.0",
     "papaparse": "^5.4.1",
+    "postcss": "^8.4.39",
     "prop-types": "15.8.1",
     "react": "18.2.0",
     "react-apexcharts": "1.4.0",
+    "react-datepicker": "^7.3.0",
     "react-dom": "18.2.0",
     "react-router-dom": "6.12.1",
     "reactstrap": "9.1.10",
     "sass": "1.63.2",
+    "tailwindcss": "^3.4.6",
     "web-vitals": "3.3.2"
   },
   "scripts": {
